manifest/objects/ALTF__Insight_Card__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insight Card</relationshipLabel>
        <relationshipName>Insight_Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Impact__c</fullName>
        <label>Impact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card_Contact_Last_Mod__c</fullName>
        <label>Insight Node Contact Last Mod</label>
        <summarizedField>ALTF__Insight_Card_Contact__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ALTF__Insight_Card_Contact__c.ALTF__Insight_Card__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Last_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Insight Card</relationshipLabel>
        <relationshipName>Insight_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Pressure_Type__c</fullName>
        <label>Pressure Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Altify Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipLabel>Altify Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Goal</fullName>
                </value>
                <value>
                    <fullName>Pressure</fullName>
                </value>
                <value>
                    <fullName>Initiative</fullName>
                </value>
                <value>
                    <fullName>Obstacle</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Insight Card</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insight Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Insight Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>